# qtagent-qtc-plugin

./: .gitignore  CMakeLists.txt  PhaseTwo.md  QLP.json.in  README.md  planA.md  qlp.cpp  qlpconstants.h  qlptr.h
src/: llmmanager.cpp  llmmanager.h
src/core/: codeactionparser.cpp  codeactionparser.h  codeeditormanager.cpp  codeeditormanager.h  conversationhistory.h
src/mcp/: mcpserver.cpp  mcpserver.h
src/providers/base/: llmprovider.cpp  llmprovider.h
src/providers/claude/: claudeprovider.cpp  claudeprovider.h
src/providers/ollama/: ollamaprovider.cpp  ollamaprovider.h
src/providers/openai/: openaiprovider.cpp  openaiprovider.h
src/settings/: llmsettings.cpp  llmsettings.h
src/ui/: chatdockwidget.cpp  chatdockwidget.h  chatfooterwidget.cpp  chatfooterwidget.h  chatmessagewidget.cpp  chatmessagewidget.h  enhancedchatmessagewidget.cpp  enhancedchatmessagewidget.h  llmoptionspage.cpp  llmoptionspage.h  typingindicatorwidget.cpp  typingindicatorwidget.h
tests/: tst_conversationhistory.cpp  tst_llmmanager.cpp  tst_mcpserver.cpp  tst_openaiprovider.cpp
tests/integration_tests/: tst_lmstudio_integration.cpp  tst_tooling_integration.cpp
